--- a/package.json
+++ b/package.json
@@ -2,45 +2,67 @@
   "name": "loja",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
+  },
+  "ct3aMetadata": {
+    "initVersion": "6.11.1"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "1.0.5",
-    "@prisma/client": "^4.5.0",
-    "@tanstack/react-query": "^4.16.0",
-    "@trpc/client": "^10.0.0",
-    "@trpc/next": "^10.0.0",
-    "@trpc/react-query": "^10.0.0",
-    "@trpc/server": "^10.0.0",
+    "@prisma/client": "4.5.0",
+    "@tanstack/react-query": "4.19.1",
+    "@trpc/client": "10.0.0",
+    "@trpc/next": "10.0.0",
+    "@trpc/react-query": "10.0.0",
+    "@trpc/server": "10.0.0",
+    "daisyui": "2.38.1",
     "next": "13.0.2",
     "next-auth": "4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "3.18.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.26.0",
+    "@antfu/eslint-config": "0.29.4",
+    "@commitlint/config-conventional": "17.2.0",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "autoprefixer": "10.4.7",
+    "commitizen": "4.2.5",
+    "cz-git": "1.3.12",
+    "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4"
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-tailwindcss": "3.6.2",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.4.14",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "0.1.13",
+    "prisma": "4.5.0",
+    "syncpack": "8.3.9",
+    "tailwindcss": "3.2.0",
+    "typescript": "4.8.4"
   },
-  "ct3aMetadata": {
-    "initVersion": "6.11.1"
+  "scripts": {
+    "build": "next build",
+    "commit": "cz",
+    "dev": "next dev",
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "start": "next start",
+    "syncpack:fix": "run-s syncpack:fix:\\*",
+    "syncpack:fix:format": "syncpack format",
+    "syncpack:fix:mismatches": "syncpack fix-mismatches",
+    "syncpack:lint": "run-s syncpack:lint:\\*",
+    "syncpack:lint:mismatches": "syncpack list-mismatches",
+    "syncpack:lint:semver-ranges": "syncpack lint-semver-ranges"
   }
 }
