--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ NEXTAUTH_URL=http://localhost:3000
 # Next Auth Google Provider
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Default Admin Email
+ADMIN_EMAIL=user@domain.com
