--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "initVersion": "6.11.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.231.0",
+    "@aws-sdk/s3-request-presigner": "^3.231.0",
     "@next-auth/prisma-adapter": "1.0.5",
     "@prisma/client": "4.5.0",
     "@tanstack/react-query": "4.19.1",
