--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ GOOGLE_CLIENT_SECRET=
 
 # Default Admin Email
 ADMIN_EMAIL=user@domain.com
+
+# AWS
+AWS_REGION=sa-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
