--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "validator": "^13.7.0",
     "zod": "3.18.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "5.33.0",
     "autoprefixer": "10.4.7",
     "commitizen": "4.2.5",
