--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "10.0.0",
     "@trpc/server": "10.0.0",
     "daisyui": "2.38.1",
+    "js-brasil": "^2.5.3",
     "next": "13.0.2",
     "next-auth": "4.17.0",
     "react": "18.2.0",
