--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,11 @@ GOOGLE_CLIENT_SECRET=
 # Default Admin Email
 ADMIN_EMAIL=user@domain.com
 
-# AWS
-AWS_REGION=sa-east-1
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_BUCKET_NAME=
+# AWS S3
+S3_REGION=sa-east-1
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
 
 # Company Name
 NEXT_PUBLIC_COMPANY_NAME=
