--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,6 @@ S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
 
-# Company Name
+# Company Data
 NEXT_PUBLIC_COMPANY_NAME=
+NEXT_PUBLIC_PHONE=
